# course-project-column-engine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: convert.cpp.F0854742DD1732BC.idx  convert.h.6CA2936D6A7A4CB5.idx  run_convert.cpp.46D6B1236E71747D.idx  test_convert.cpp.5CE6E3CD4124688C.idx
src/: CMakeLists.txt
src/app/: CMakeLists.txt  run_convert.cpp
src/convert/: CMakeLists.txt  convert.cpp  convert.h  file_reader.cpp  file_reader.h  meta_reader.h  metadata.h  run_convert.cpp  scheme_reader.cpp  scheme_reader.h  types.cpp  types.h
src/format/: CMakeLists.txt  meta_reader.cpp  meta_reader.h  schema_reader.cpp  schema_reader.h  scheme_reader.cpp  scheme_reader.h
src/interface/: CMakeLists.txt  metadata.h
src/io/: CMakeLists.txt  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h
src/types/: CMakeLists.txt  types.cpp  types.h
tests/convert/: CMakeLists.txt  test_convert.cpp  test_writer_reader.cpp
